# vtkat

./: README.md  pyproject.toml
vtkat/: __init__.py
vtkat/actors/: __init__.py  ghost_actor.py  lines_actor.py  square_points_actor.py  vertices_actor.py
vtkat/interactor_styles/: __init__.py  arcball_camera.py  arcball_camera_style.py  box_selection_style.py
vtkat/pickers/: __init__.py  cell_area_picker.py  cell_property_area_picker.py
vtkat/poly_data/: __init__.py  lines_data.py  vertices_data.py
vtkat/render_widgets/: __init__.py  animated_render_widget.py  common_render_widget.py
vtkat/utils/: __init__.py
vtkit/interactor_styles/: __init__.py  arcball_camera.py
vtkit/poly_data/: __init__.py  vertices_data.py
vtkit/utils/: poly_data_utils.py
