[tool.poetry]
name = "vtkit"
version = "0.1.0"
description = ""
authors = ["André Fernandes <fpf.andre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vtk = "^9.3.0"
pyqt5-qt5 = "5.15.2"
pyqt5 = "^5.15.10"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
